refactor: usar Collections.emptyList() em vez de List.of() para listas vazias